Switch data type from primitive to wrapper type